Implemented initial version of authgear auth

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
-# AUTHGEAR
 AUTHGEAR_ENDPOINT=https://myapp.authgearapps.com
 AUTHGEAR_CLIENT_ID=
 AUTHGEAR_CLIENT_SECRET=
+AUTHGEAR_PROJECT_ID=
+AUTHGEAR_ADMIN_KEY_ID=
+AUTHGEAR_ADMIN_PRIVATE_KEY_PEM=
+AUTHGEAR_ADMIN_GRAPHQL_ENDPOINT=
+
 BASE_URL=
 
-# TYPESENSE
 TYPESENSE_HOST=
 TYPESENSE_ADMIN_KEY=
 TYPESENSE_SEARCH_KEY=
 
-# REDIS
 REDIS_URL=
-
-# DATABASE
 DATABASE_URL=
