--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-AUTHGEAR_ENDPOINT=https://myapp.authgearapps.com
-AUTHGEAR_CLIENT_ID=
+VITE_AUTHGEAR_ENDPOINT=https://myapp.authgearapps.com
+VITE_AUTHGEAR_CLIENT_ID=
 AUTHGEAR_CLIENT_SECRET=
 AUTHGEAR_PROJECT_ID=
 AUTHGEAR_ADMIN_KEY_ID=
