--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
-	"dependencies": {
-		"@neondatabase/serverless": "^1.0.2",
-		"@vercel/node": "^5.3.24",
-		"axios": "^1.12.2",
-		"cookie": "^1.0.2",
-		"dotenv": "^17.2.3",
-		"drizzle-orm": "^0.44.6",
-		"jwt-decode": "^4.0.0",
-		"md5": "^2.3.0",
-		"redis": "^5.8.3",
-		"typesense": "^2.1.0",
-		"zod": "^4.1.12"
-	},
-	"devDependencies": {
-		"@types/md5": "^2.3.5",
-		"@types/node": "^24.6.2",
-		"drizzle-kit": "^0.31.5"
-	}
+  "name": "portal",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@authgear/web": "^4.0.0",
+    "@neondatabase/serverless": "^1.0.2",
+    "@newrelic/video-videojs": "^4.0.1",
+    "@vercel/node": "^5.3.24",
+    "axios": "^1.12.2",
+    "cookie": "^1.0.2",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.6",
+    "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
+    "md5": "^2.3.0",
+    "redis": "^5.8.3",
+    "typesense": "^2.1.0",
+    "zod": "^4.1.12"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.33",
+    "@types/md5": "^2.3.5",
+    "@types/node": "^24.8.1",
+    "drizzle-kit": "^0.31.5",
+    "typescript": "~5.9.3",
+    "vite": "^7.1.7"
+  }
 }
