--- a/package.json
+++ b/package.json
@@ -11,20 +11,31 @@
   "dependencies": {
     "@authgear/web": "^4.0.0",
     "@neondatabase/serverless": "^1.0.2",
+    "@newrelic/browser-agent": "^1.299.0",
     "@newrelic/video-videojs": "^4.0.1",
     "@vercel/node": "^5.3.24",
+    "algoliasearch": "^5.40.1",
     "axios": "^1.12.2",
     "cookie": "^1.0.2",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
+    "instantsearch.js": "^4.80.0",
     "jquery": "^3.7.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "jwt-decode": "^4.0.0",
     "md5": "^2.3.0",
+    "mdb-ui-kit": "^9.2.0",
+    "parsleyjs": "^2.9.2",
     "redis": "^5.8.3",
     "typesense": "^2.1.0",
+    "typesense-instantsearch-adapter": "^2.9.0",
+    "video.js": "^8.23.4",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/jquery": "^3.5.33",
     "@types/md5": "^2.3.5",
     "@types/node": "^24.8.1",
