--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@vercel/node": "^5.3.24",
     "algoliasearch": "^5.40.1",
     "axios": "^1.12.2",
+    "boxicons": "^2.1.4",
     "cookie": "^1.0.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
+    "instantsearch.css": "^8.5.1",
     "instantsearch.js": "^4.80.0",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
